# cmake_project

./: CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
Adder/: .gitignore  CMakeLists.txt  adder.cpp
